# github-em

./: .pre-commit-config.yaml  Cross_Validation.py  Makefile  README.md  commit_hook_test.py  pyproject.toml
Data Challenges/: README.md
Leet Code/: Binary Search.py  Find First and Last Position of Element in Sorted Array.py  First Bad Version.py  Flood Fill.py  Longest Substring Without Repeating Characters.py  Merge Two Binary Files.py  Merge Two Sorted Lists.py  Middle of the Linked List.py  Move Zeroes.py  Remove Nth Node From End of List.py  Search Insert Position.py  Squares of a Sorted Array.py  Two Sum II - Input Array Is Sorted
Projects/: Homework3Opti_2.ipynb  Mismatch_kernel.ipynb  OptiMLProject_Elliot_Muller.ipynb  README.md
Projects/new_folder/: new_file.py
data_challenges/: Digit_Recognizer (0.99296 accuracy).ipynb
leet_code/: binary_search.py  find_first_and_last_position_of_element_in_sorted_array.py  flood_fill.py  longest_substring_without_repeating_characters.py  merge_two_binary_files.py  middle_of_linked_list.py  move_zeroes.py  remove_nth_node_from_end_of_list.py  search_insert_position.py  squares_of_a_sorted_array.py  two_sum_input_array_sorted.py
new_directory/: transfomers.py
other/: constants.py  transformers.py
